--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Spotify for Podcasters</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="/photos/favicon.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
