--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<div id="parent">
+<div id="parent"> <!--Here first division is given for the reference to next pages, the dropdown boxes etc..-->
 <div id="div1">
     <h4>Introducing the all new Spotify for Podcasters mobile app.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://podcasters.spotify.com/resources/news/mobile-app-comments" id="a1">Find out more</a></h4>
 </div>
@@ -49,14 +49,14 @@
         <button id="b1">Get started</button>
     </div>
    <div style="margin-right: 8%;">
-        <video autoplay loop muted style="border-radius: 30px;">
+        <video autoplay loop muted style="border-radius: 30px;"> <!--this is the video tag for adding video file from the files-->
             <source src="photos/1.mp4" type="video/mp4">
         </video>
    </div>
 </div><br><br><br><br><br>
 <h1 style="text-align: center; font-size: 56px; font-weight: 700;">All the tools to grow your show</h1>
 <br><br><br>
-<div id="div6">
+<div id="div6"> <!--This division is given in flex manner where the image is on side and the content is on other side-->
     <div id="div7"><img src="photos/2.webp" width="50%"></div>
     <div id="div8">
         <h1 style="font-size: 45px;">Bring your show <br>to life with video</h1><br>
@@ -92,7 +92,7 @@
     <div id="div10"><img src="photos/5.webp" width="84%"></div>
 </div>
 <br><br><br><br>
-<button id="b2">Get started</button>
+<button id="b2">Get started</button> <!--This is a button element-->
 <div id="div11">
     <div id="div12">
         <h1 style="font-size: 30px; margin-bottom: 7%;">Already have a show?</h1>
@@ -115,7 +115,7 @@
         <div><p style="font-weight: 500; font-size: 15.5px; margin-left: 47.5%; margin-right: -15%; margin-top: 3%;">Don’t miss out on the latest tips, features, and updates from Spotify for Podcasters, and join in on the conversation.</p>
         </div>
     </div>
-    <div style="display: flex; margin-bottom: -8.7%;">
+    <div style="display: flex; margin-bottom: -8.7%;"> <!--In these divisions we are creating images attached with buttons and work together-->
         <div id="parent3"><img src="photos/6.webp" id="img1">
         <button id="b4">Instagram ⟶</button>
         <i class="fa-brands fa-instagram"></i></div>
@@ -156,7 +156,7 @@
         <h4 id="h9"></h4><a href="about:blank" id="a3">Findaway Voices</a>
     </div>
     <div style="margin-right: 2%; width: 17%;">
-        <h4 style="margin-bottom: 6%;">Follow us</h4>
+        <h4 style="margin-bottom: 6%;">Follow us</h4> <!--Providing buttons to go spotify's social media-->
         <i class="fa-brands fa-x-twitter icon" style="top: 5px; left: 0px;"></i>
         <i class="fa-brands fa-instagram icon" style="top: 5px; left: 10px;"></i>
     </div>
