--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spotify for Podcasters</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="photos/favicon.png">
